# jp-adopt-core

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
apps/api/: Dockerfile  README.md  openapi.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260423_0001_initial_contacts_outbox.py  20260424_0002_outbox_claimed_at.py  20260515_0003_foundation_amy_return.py  20260515_0006_magic_link.py  20260516_0004_intake_endpoints.py  20260517_0005_match_domain.py  20260518_0007_identity_link_magic_unique.py  20260518_0008_facilitator_role.py  20260520_0009_dt_migration_targets.py  20260520_0010_drip_engine.py  20260520_0011_daily_digest.py  20260526_0012_rename_user_b2c_subject_id.py  20260526_0013_seed_partner_tenants_joshua_project.py  20260526_0014_seed_staff_user_roles.py  20260526_0015_seed_amy_banta_user_role.py  20260526_0016_contact_profile.py  20260526_0017_interest_fpg_fields.py  20260526_0018_consent.py  20260526_0019_contact_assignment.py  20260527_0020_fpg_people_id3_index.py  20260528_0021_people_id3_canonical.py  20260603_0022_contact_phone.py  20260603_0022_match_manual_override.py  20260603_0023_contact_phone.py  20260603_0023_interest_source_keys.py  20260603_0024_interest_source_keys.py  20260604_0025_migration_conflict_dedup.py  20260609_0026_intake_api_keys.py  20260617_0027_seed_staff_digest_contacts.py  20260618_0028_staff_profile.py  20260618_0029_seed_amy_jp_tenant_identity.py  20260624_0030_deleted_contacts.py  20260624_0031_backfill_dt_active_not_matched.py  20260624_0032_campaign_step_body_html.py  20260625_0033_duplicate_review_decision.py
apps/api/email-templates/: _base.html.jinja  adopter-welcome.step-0.mjml  adopter-welcome.step-1.mjml  adopter-welcome.step-2.mjml  adopter-welcome.step-3.mjml  adopter-welcome.step-4.mjml  adopter-welcome.step-5.mjml  adopter-welcome.step-6.mjml  adopter-welcome.step-7.mjml  daily-digest.mjml  facilitator-approved.step-0.mjml  facilitator-approved.step-1.mjml  facilitator-approved.step-2.mjml  facilitator-approved.step-3.mjml  facilitator-approved.step-4.mjml  facilitator-welcome.step-0.mjml
apps/api/src/jp_adopt_api/: __init__.py  auth.py  auth_entra.py  auth_magic.py  config.py  db.py  deps.py  email_delivery.py  email_utils.py  graph.py  main.py  models.py  outbox_suppression.py  schemas.py
apps/api/src/jp_adopt_api/domain/: digest.py  drips.py  matching.py  matching_config.py  state_machine.py  state_machine_errors.py
apps/api/src/jp_adopt_api/routers/: admin.py  auth_magic_link.py  contacts.py  drips.py  etl_admin.py  fpgs.py  health.py  intake.py  manual_contacts.py  matches.py  suppression.py  workflow.py
apps/api/src/jp_adopt_api/scripts/: __init__.py  export_openapi.py  sync_fpg.py
apps/api/tests/: conftest.py  test_admin_api.py  test_adopter_interest_fields.py  test_auth_dispatch.py  test_body_html_migration.py  test_consent.py  test_contact_assignment.py  test_contact_delete.py  test_contact_enrollments.py  test_contact_interests.py  test_contact_profile.py  test_contact_profile_api.py  test_contacts_filters.py  test_contacts_record.py  test_digest.py  test_drips.py  test_drips_body_editor.py  test_duplicate_review.py  test_email_delivery.py  test_entra_direct.py  test_etl_admin.py  test_foundation_migration.py  test_graph.py  test_intake.py  test_intake_helpers.py  test_intake_profile.py  test_magic_link.py  test_manual_contacts.py  test_match_algorithm.py  test_match_domain.py  test_matches_api.py  test_production_auth.py  test_render_step_body_html.py  test_sanitize_body_html.py  test_seed_0029_amy_jp_identity.py  test_smoke.py  test_state_machine.py  test_suppression.py  test_sync_fpg.py  test_worker_send_contact_email.py  (+2 more)
apps/etl/: Dockerfile  README.md  pyproject.toml  run-cron.sh  runbook.md
apps/etl/src/jp_adopt_etl/: __init__.py  dt_source.py  forms_orchestrator.py  forms_source.py  orchestrator.py
apps/etl/src/jp_adopt_etl/mappers/: __init__.py  activity_history.py  assignment.py  channels.py  comments.py  contacts.py  forms.py  interests.py  p2p.py  php.py  profile.py  status.py  users.py
apps/etl/src/jp_adopt_etl/reconcile/: __init__.py  track_a_duplicate_email.py  track_a_merge.py  track_b_assignments.py  track_c_fpg.py
apps/etl/tests/: test_activity_history_mapper.py  test_assignment_mapper.py  test_channels_mapper.py  test_comments_mapper.py  test_contacts_mapper.py  test_forms_mapper.py  test_forms_orchestrator.py  test_forms_orchestrator_cli.py  test_forms_source.py  test_interests_mapper.py  test_orchestrator_integration.py  test_profile_mapper.py  test_status_mapper.py  test_track_a_db_decisions.py  test_track_a_duplicate_email_mapper.py  test_track_a_merge.py  test_track_a_reconcile_integration.py  test_track_b_assignments_mapper.py  test_track_b_reconcile_integration.py  test_track_c_fpg_integration.py  test_track_c_fpg_unit.py  test_users_mapper.py
apps/web/: .env.local.example  .gitignore  Dockerfile  README.md  next.config.ts  package.json  tailwind.config.ts  vitest.config.ts
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/src/jp_adopt_worker/: __init__.py  main.py  outbox_delivery.py  settings.py  worker_settings.py
apps/worker/src/jp_adopt_worker/tasks/: __init__.py  send_contact_email.py  send_daily_digest.py  send_drip_step.py  send_magic_link_email.py
docs/: cutover-master-plan.md  data-dictionary.md  dt-parity-inventory.md
docs/brainstorms/: 2026-06-04-drips-ui-requirements.md  2026-06-24-drip-template-editor-requirements.md
docs/follow-ups/: 2026-06-18-demo-findings.md  pr-29-review.md
docs/plans/: 2026-05-26-001-feat-contact-record-and-adoption-fields-plan.md  2026-05-28-001-refactor-people-group-identity-plan.md  2026-06-03-001-feat-match-override-reason-email-plan.md  2026-06-04-001-feat-drips-ui-plan.md  2026-06-09-001-rate-limiting-plan.md  2026-06-09-002-dt-contact-import-execution-plan.md  (+4 more)
scripts/: dev-stack.sh  seed-local.sh  setup-local.sh  smoke-local.sh  smoke-prod.sh
(+118 files in other folders)
