[project]
name = "jp-adopt-api"
version = "0.1.0"
description = "JP ADOPT FastAPI service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    # Email-template rendering for drip and digest emails. Strictly
    # required: the `_base.html.jinja` shared shell uses Jinja's
    # `{% extends %}` block, which only works through FileSystemLoader.
    # When jinja2 is missing the renderer falls back to naive {{ key }}
    # substitution and the templates lose all branded chrome.
    "jinja2>=3.1.0",
    # psycopg3 (sync) for Alembic migrations. The runtime app uses
    # asyncpg via SQLAlchemy 2's async engine; Alembic needs a sync
    # driver and connects via the `db-url-migrator` KV secret whose
    # scheme is `postgresql+psycopg://` (the SQLAlchemy v2 psycopg3
    # dialect). Required by .github/workflows/deploy.yml's `migrate`
    # job; without this, `uv run alembic upgrade head` errors with
    # `ModuleNotFoundError: No module named 'psycopg'`.
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.7.0",
    "pyjwt[crypto]>=2.10.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
