[project]
name = "jp-adopt-api"
version = "0.1.0"
description = "JP ADOPT FastAPI service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    # ACS email send (drip test-send endpoint). The send helper lives in this
    # package so the API can send without importing the worker package, which
    # the API runtime container does not ship.
    "azure-communication-email>=1.0.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    # Plain-text alternative derived from authored drip body HTML. Beats the
    # old tag-strip regex: preserves link URLs and list structure.
    "html2text>=2024.2.26",
    "httpx>=0.28.0",
    # HTML sanitizer (Rust/ammonia binding) for in-app-authored drip body
    # content. Applied on save against a tight allowlist; `bleach` is
    # deprecated (unmaintained html5lib), so we use nh3.
    "nh3>=0.2.18",
    # Email-template rendering for drip and digest emails. Strictly
    # required: the `_base.html.jinja` shared shell uses Jinja's
    # `{% extends %}` block, which only works through FileSystemLoader.
    # When jinja2 is missing the renderer falls back to naive {{ key }}
    # substitution and the templates lose all branded chrome.
    "jinja2>=3.1.0",
    # MS Graph user lookup (#97): backend client-credentials token
    # acquisition for the admin user-roles enrichment + typeahead.
    # When the AZURE_GRAPH_* env vars are absent the module degrades
    # gracefully — the admin endpoints still work, they just don't
    # surface display names / can't search by email.
    "msal>=1.31.0",
    "pydantic-settings>=2.7.0",
    "pyjwt[crypto]>=2.10.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
# #65 (P1): psycopg3 (sync) is only needed by Alembic migrations.
# The runtime app uses asyncpg via SQLAlchemy 2's async engine;
# Alembic needs a sync driver and connects via the
# ``db-url-migrator`` KV secret whose scheme is
# ``postgresql+psycopg://`` (the SQLAlchemy v2 psycopg3 dialect).
# Keeping psycopg in a `migrate` extra strips ~5-7 MB of unused
# binary deps out of the production container image. The migrate
# CI job installs with ``uv sync --package jp-adopt-api --extra
# migrate``; the API runtime container does NOT install this extra.
migrate = [
    "psycopg[binary]>=3.2.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
