[project]
name = "jp-adopt-etl"
version = "0.1.0"
description = "JP ADOPT DT MySQL → Postgres ETL (U9, batch — sync)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Sync stack on purpose. The ETL is a batch job — we explicitly do not
    # mix async + sync engines in one process. The API stays asyncpg; this
    # service uses sync drivers all the way down.
    "jp-adopt-api",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "pymysql>=1.1.1",
    "phpserialize>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
# Console entry point exposed as ``uv run --package jp-adopt-etl dt-etl``.
dt-etl = "jp_adopt_etl.orchestrator:main"
forms-etl = "jp_adopt_etl.forms_orchestrator:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
jp-adopt-api = { workspace = true }

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
