[project]
name = "jp-adopt-worker"
version = "0.1.0"
description = "JP ADOPT outbox dispatcher (ARQ)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jp-adopt-api",
    "arq>=0.26.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]

[project.scripts]
jp-adopt-worker = "jp_adopt_worker.main:run_worker"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
jp-adopt-api = { workspace = true }

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
